Assorted dark mode fixes

--- a/src/InteractiveControls.css
+++ b/src/InteractiveControls.css
@@ -2,17 +2,6 @@
     margin-top: 20px;
 }
 
-.channel-control-group-label {
-    margin: -29px -10px 13px -10px;
-    padding: 0 10px;
-    background-color: white;
-    width: fit-content;
-}
-
-.bp5-dark .channel-control-group-label {
-    background-color: #394b59;
-}
-
 .channel-control {
     display: flex;
     align-items: center;
